[project]
name = "hlspaces"
version = "0.1.0"
description = "Hyperliquid Spaces Archive — capture, transcribe, and publish X Spaces"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hlspaces = "hlspaces.__main__:main"
